# gitgossip

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: release.yaml  tests.yml
gitgossip/: cli.py
gitgossip/commands/: commit.py  init.py  prompts.py  summarize.py  summarize_mr.py
gitgossip/config/: config_service.py
gitgossip/core/: constants.py  git_parser.py
gitgossip/core/factories/: llm_analyzer_factory.py
gitgossip/core/interfaces/: chat_client.py  commit_parser.py  llm_analyzer.py  repo_provider.py  summarizer_service.py
gitgossip/core/llm/: errors.py  llm_analyzer.py  mock_llm_analyzer.py  prompt_builder.py
gitgossip/core/llm/clients/: __init__.py  agent_cli_chat_client.py  openai_chat_client.py
gitgossip/core/llm/prompts/: chunk.txt  commit.txt  final.txt  synthesis.txt
gitgossip/core/models/: commit.py
gitgossip/core/parsers/: commit_parser.py
gitgossip/core/providers/: git_repo_provider.py
gitgossip/core/services/: summarizer_service.py
tests/commands/: test_commit.py  test_init.py  test_prompts.py
tests/core/: test_commit_parser.py  test_git_parser.py  test_git_repo_provider.py  test_llm_analyzer.py  test_prompt_builder.py  test_summarize_service.py
tests/core/factories/: test_llm_analyzer_factory.py
tests/core/llm/: test_llm_analyzer_transport.py
tests/core/llm/clients/: test_agent_cli_chat_client.py  test_openai_chat_client.py
